fix(global): fix alignment of header titles after moving component conteainr mixin in components (#90)

--- a/src/content-modules/global/inline-image/inline-image.module.css
+++ b/src/content-modules/global/inline-image/inline-image.module.css
@@ -2,8 +2,12 @@
 @import '../../../assets/styles/includes/variables.css';
 @import '../../../assets/styles/includes/typography.css';
 
-.componentWrapper {
+.wrapper {
+  @mixin component-container;
   @mixin component-vertical-spacing;
+}
+
+.componentWrapper {
   @mixin grid-container;
   flex-wrap: wrap;
 }
